--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,7 @@ spring:
       defer-datasource-initialization: true
   servlet.multipart.max-file-size: 20MB
   servlet.multipart.max-request-size: 20MB
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
