--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com</groupId>
-	<artifactId>softcloud</artifactId>
+	<artifactId>musicloud</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>softcloud</name>
+	<name>musicloud</name>
 	<description>Final project for Softuni</description>
 	<properties>
 		<java.version>17</java.version>
