--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,14 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 			<version>2.7.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.hsqldb/hsqldb -->
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.6.1</version>
+			<scope>test</scope>
+		</dependency>
+
 
 
 
