small changes and heroku prep

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
 	</parent>
 	<groupId>com</groupId>
 	<artifactId>musicloud</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<name>musicloud</name>
 	<description>Final project for Softuni</description>
 	<properties>
@@ -55,7 +54,12 @@
 			<version>2.6.1</version>
 			<scope>test</scope>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.4.1</version>
+		</dependency>
 
 
 
