changed reset password endpoints

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -12,3 +12,7 @@ mail:
   port: ${MAIL_PORT:}
   username: ${MAIL_USERNAME:}
   password: ${MAIL_PASSWORD:}
+
+server:
+  port: ${PORT:8080}
+  host: ${HOST:192.168.0.100:8080}
