--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,3 +25,8 @@ mail:
 server:
   port: ${PORT:8080}
   host: ${HOST:192.168.0.100:8080}
+
+cloudinary:
+  name: ${CLOUD_NAME:}
+  key: ${CLOUD_KEY:}
+  secret: ${CLOUD_SECRET:}
